
[package]
name = "smoothie-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = {version = "4.1.4 ", features = ["derive"] } # cli arg helper
color-eyre = "0.6.2" # error handling
ffprobe = "0.3.3"
opener = "0.7.0"  # open file with default app
rand = "0.8.5"  # randomly choose from fruits for suffix
rfd = "0.11.0"  # open file dialog
which = "4.4.0" # Get-Command / where.exe / which alternative

# json stuff
serde = "1.0.152" 
serde_derive = "1.0.152"
serde_json = "1.0.91"

colored = "2.0.0"
enable-ansi-support = "0.2.1"
num-rational = "0.4.1"
anyhow = "1.0.69"
ureq = { version = "2.6.2", features = ["json"] }
cty = "0.2.2"
min-max = "0.1.8"
indicatif = { version = "0.17.2", features = ["improved_unicode"] }
regex = "1.7.2"
indexmap = { version = "2.2.6", features = ["serde"] }

# gui-related
eframe = "0.27.2" # egui 'frame'work
env_logger = "0.11.3"
winit = "0.29.15" # load icon
image = "0.25.1" # load icon

[build-dependencies]
winres = "0.1" # give the exe an icon
cc = "1.0.79"  # for /src/windows.c

# make small binaries with --release
[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
