
[package]
name = "smoothie-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = {version = "4.1.4 ", features = ["derive"] } # cli arg helper
color-eyre = "0.6.2" # error handling
ffprobe = "0.4.0"
opener = "0.7.0"  # open file with default app
rand = "0.8.5"  # randomly choose from fruits for suffix
rfd = "0.14.1"  # open file dialog
which = "6.0.1" # Get-Command / where.exe / which alternative

# json stuff
serde = "1.0.152" 
serde_derive = "1.0.152"
serde_json = "1.0.91"

colored = "2.0.0"
enable-ansi-support = "0.2.1"
num-rational = "0.4.1"
anyhow = "1.0.69"
ureq = { version = "2.6.2", features = ["json"] }
cty = "0.2.2"
min-max = "0.1.8"
indicatif = { version = "0.17.2", features = ["improved_unicode"] }
regex = "1.7.2"
indexmap = { version = "2.2.6", features = ["serde"] }

# gui-related
eframe = "0.27.2" # egui 'frame'work
env_logger = "0.11.3"
winit = "0.30.0" # load icon
image = "0.25.1" # load icon
copypasta = "0.10.1" # copy to clipboard

winapi = { version = "0.3.9", features = ["wincon"] }
windows = { version = "0.56.0", features = ["Win32", "Win32_UI", "Win32_UI_WindowsAndMessaging"]}
homedir = "0.3.4"

[build-dependencies]
winres = "0.1" # give the exe an icon
cc = "1.0.79"  # for /src/windows.c

# make small binaries with --release
[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
